--- a/css/style.css
+++ b/css/style.css
@@ -13,11 +13,11 @@ body {
 p {
     margin: 25px 50px 75px 100px;
 }
-
+/*
 h1 {
     margin: 25px 50px 75px 100px;
 }
-
+*/
 img {
     position: static;
     border-style: double;
